add dependencies